dct.yml upodated

--- a/docker-compose.test.yml
+++ b/docker-compose.test.yml
@@ -2,6 +2,7 @@ sut:
   build: .
   links:
       - rest
+  working_dir: /hello-world-rest-service/build/libs/
   dockerfile: Dockerfile.test
   command: echo "hello world"
 
