--- a/docker-compose.test.yml
+++ b/docker-compose.test.yml
@@ -1,4 +1,5 @@
 sut:
+  build: .
   working_dir: /hello-world-rest-service/build/libs/
   dockerfile: Dockerfile.test
   command: echo "hello world"
