--- a/Dockerfile.test
+++ b/Dockerfile.test
@@ -2,6 +2,7 @@ FROM java:8-jdk-alpine
 LABEL maintainer="selitektay@gmail.com"
 RUN mkdir hello-world-rest-service
 COPY /hello-world-rest-service /hello-world-rest-service/
+WORKDIR hello-world-rest-service
 RUN ls
 RUN chmod 777 gradlew
 RUN ./gradlew build
