dockerfile.test updated

--- a/Dockerfile.test
+++ b/Dockerfile.test
@@ -1,10 +1,10 @@
-FROM java:8-jdk-alpine
+FROM gradle:8-jdk-alpine
 LABEL maintainer="selitektay@gmail.com"
 RUN mkdir hello-world-rest-service
 COPY /hello-world-rest-service /hello-world-rest-service/
 WORKDIR hello-world-rest-service
 RUN ls
-RUN chmod 777 gradlew
+RUN gradle wrapper --gradle-version 4.3.1
 RUN ./gradlew build
 WORKDIR /hello-world-rest-service/build/libs/
 EXPOSE 8080
