--- a/Dockerfile.test
+++ b/Dockerfile.test
@@ -1,4 +1,4 @@
-FROM gradle:8-jdk-alpine
+FROM gradle:4.3.1-jdk8-alpine
 LABEL maintainer="selitektay@gmail.com"
 RUN mkdir hello-world-rest-service
 COPY /hello-world-rest-service /hello-world-rest-service/
