--- a/Dockerfile.test
+++ b/Dockerfile.test
@@ -7,5 +7,7 @@ RUN ls
 RUN gradle wrapper --gradle-version 4.3.1
 RUN ./gradlew build
 WORKDIR /hello-world-rest-service/build/libs/
+RUN ls
+RUN pwd
 EXPOSE 8080
 ENTRYPOINT ["java", "-jar", "gs-rest-service-0.1.0.jar"]
