--- a/docker-compose.test.yml
+++ b/docker-compose.test.yml
@@ -1,5 +1,3 @@
 sut:
-  build: .
-  working_dir: /hello-world-rest-service/build/libs/
-  dockerfile: Dockerfile.test
+  build: ./docker-test/
   command: echo "hello world"
