--- a/docker-compose.test.yml
+++ b/docker-compose.test.yml
@@ -1,3 +1,3 @@
 sut:
-  build: .
-  command: echo "Tests pass!"
+  build: ./hello-world-rest-service/
+  command: ./gradlew rest-service-api-test:test
