dockerfile.test added

--- a/docker-compose.test.yml
+++ b/docker-compose.test.yml
@@ -1,3 +1,4 @@
 sut:
-  build: ./hello-world-rest-service/
+  build:
+  dockerfile: Dockerfile.test
   command: ./gradlew rest-service-api-test:test
