--- a/docker-compose.test.yml
+++ b/docker-compose.test.yml
@@ -1,4 +1,3 @@
 sut:
-  build:
-    dockerfile: Dockerfile.test
-    command: ./gradlew rest-service-api-test:test
+  build: .
+  command: ./gradlew rest-service-api-test:test
