--- a/docker-compose.test.yml
+++ b/docker-compose.test.yml
@@ -1,10 +1,6 @@
-version: '2'
-
-services:
-
   sut:
     build: ./rest-service-api-test/
-    depends on:
+    links:
       - rest
     networks:
       - back-end
