--- a/Dockerfile.test
+++ b/Dockerfile.test
@@ -1,8 +1,8 @@
 FROM gradle:4.3.1-jdk8-alpine
 LABEL maintainer="selitektay@gmail.com"
-RUN mkdir hello-world-rest-service
-COPY ./ /hello-world-rest-service/
-WORKDIR hello-world-rest-service
+RUN mkdir docker-demo
+COPY ./ /docker-demo/
+WORKDIR docker-demo
 RUN gradle wrapper --gradle-version 4.3.1
 EXPOSE 8080
-CMD ./gradlew bootRun
+CMD ./gradlew rest-service-api-test:test
