dockerfile test added

--- a/Dockerfile.test
+++ b/Dockerfile.test
@@ -4,8 +4,6 @@ RUN mkdir docker-demo
 COPY ./ /docker-demo/
 WORKDIR docker-demo
 RUN gradle wrapper --gradle-version 4.3.1
-#RUN ./gradlew build
-#WORKDIR /hello-world-rest-service/build/libs/
 EXPOSE 8080
-CMD ./gradlew bootRun
+CMD ./gradlew rest-service-api-test:test
 #ENTRYPOINT ["java", "-jar", "gs-rest-service-0.1.0.jar"]
