dockertest file updated

--- a/Dockerfile.test
+++ b/Dockerfile.test
@@ -10,5 +10,5 @@ RUN ./gradlew build
 WORKDIR /docker-demo/hello-world-rest-service/build/libs
 RUN ls
 EXPOSE 8080
-RUN java -jar gs-rest-service-0.1.0.jar
+#RUN java -jar gs-rest-service-0.1.0.jar
 CMD ./gradlew rest-service-api-test:test
