--- a/docker-compose.test.yml
+++ b/docker-compose.test.yml
@@ -6,7 +6,7 @@ services:
     build:
       context: ./
       dockerfile: Dockerfile.test
-    command: ./wait-for-it.sh -t 60 rest:8080 -- echo "Spring rest is up" && ./gradlew rest-service-api-test:test -DBASE_URL=http://rest:8080
+    command: ./run-rest-test.sh
     depends_on:
       - rest
 
